fix:spacing above and below IconBox

--- a/src/app.scss
+++ b/src/app.scss
@@ -30,7 +30,8 @@
   
     .icon-boxes-container {
       width: 67.666667%; // Equivalent of w-8/12
-      padding-top: 0.5rem; // Equivalent of py-2
+      padding-top: 2.5rem; // Equivalent of py-2
+      padding-bottom: 1.40rem;
       border-top: 1px solid; // Equivalent of border-t
       border-bottom: 1px solid; // Equivalent of border-b
       border-color: #E4E7EB;
